[tool.poetry]
name = "aiogramsample"
version = "1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.10.0"
annotated-types = "^0.7.0"
certifi = "^2024.7.4"
multidict = "^6.0.5"
pydantic = "^2.8.2"
typing-extensions = "^4.12.2"
yarl = "^1.9.4"
pydantic-settings = "^2.4.0"
sqlalchemy = "^2.0.36"
aiosqlite = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
